# yew

./: .gitignore  pyproject.toml
wey_backend/: db.sqlite3
wey_backend/account/migrations/: 0001_initial.py
wey_backend/wey_backend/: settings.py  urls.py
wey_frontend/: package-lock.json  tsconfig.json
wey_frontend/src/: App.vue  main.js
wey_frontend/src/components/: PeopleYouMayKnow.vue  Toast.vue  Trends.vue
wey_frontend/src/router/: index.js
wey_frontend/src/stores/: toast.js
wey_frontend/src/views/: FeedView.vue  HomeView.vue  LoginView.vue  MessagesView.vue  SearchView.vue  SignupView.vue
